// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Authorizer Should able to access actionParams 1`] = `
Array [
  Array [
    ParameterMetadata {
      "meta": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "id",
          "properties": Object {},
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "parameters": Array [
        1234,
      ],
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on constructor 1`] = `
Array [
  Array [
    Object {
      "ctor": Object {
        "kind": "Constructor",
        "name": "constructor",
        "parameters": Array [],
      },
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Class",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Class",
      "methods": Array [
        Object {
          "decorators": Array [
            Object {
              "method": "get",
              "name": "Route",
              "url": undefined,
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
          ],
          "kind": "Method",
          "name": "get",
          "parameters": Array [
            Object {
              "decorators": Array [],
              "kind": "Parameter",
              "name": "id",
              "properties": Object {},
              "type": Number,
              "typeClassification": "Primitive",
            },
          ],
          "returnType": undefined,
          "typeClassification": undefined,
        },
      ],
      "name": "AnimalController",
      "properties": Array [],
      "type": AnimalController,
      "typeClassification": "Class",
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on method 1`] = `
Array [
  Array [
    Object {
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Method",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "method": "get",
          "name": "Route",
          "url": undefined,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "get",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "id",
          "properties": Object {},
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "parent": AnimalController,
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on parameter 1`] = `
Array [
  Array [
    Object {
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Parameter",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Parameter",
      "name": "id",
      "parent": AnimalController,
      "properties": Object {},
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on parameter property 1`] = `
Array [
  Array [
    Object {
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Parameter",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "name",
      "parent": Animal,
      "set": undefined,
      "type": String,
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access metadata from custom authorizer 1`] = `
Array [
  Array [
    MetadataImpl {
      "access": undefined,
      "action": Object {
        "decorators": Array [
          Object {
            "authorize": customAuthorizer,
            "location": "Method",
            "tag": "Custom",
            "type": "plumier-meta:authorize",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
          Object {
            "method": "get",
            "name": "Route",
            "url": undefined,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Method",
        "name": "get",
        "parameters": Array [
          Object {
            "decorators": Array [],
            "kind": "Parameter",
            "name": "id",
            "properties": Object {},
            "type": Number,
            "typeClassification": "Primitive",
          },
        ],
        "returnType": undefined,
        "typeClassification": undefined,
      },
      "actionParams": ParameterMetadata {
        "meta": Array [
          Object {
            "decorators": Array [],
            "kind": "Parameter",
            "name": "id",
            "properties": Object {},
            "type": Number,
            "typeClassification": "Primitive",
          },
        ],
        "parameters": Array [
          1234,
        ],
      },
      "controller": Object {
        "ctor": Object {
          "kind": "Constructor",
          "name": "constructor",
          "parameters": Array [],
        },
        "decorators": Array [],
        "kind": "Class",
        "methods": Array [
          Object {
            "decorators": Array [
              Object {
                "authorize": customAuthorizer,
                "location": "Method",
                "tag": "Custom",
                "type": "plumier-meta:authorize",
                Symbol(tinspector:decoratorOption): Object {
                  "allowMultiple": true,
                  "inherit": true,
                },
              },
              Object {
                "method": "get",
                "name": "Route",
                "url": undefined,
                Symbol(tinspector:decoratorOption): Object {
                  "allowMultiple": true,
                  "inherit": true,
                },
              },
            ],
            "kind": "Method",
            "name": "get",
            "parameters": Array [
              Object {
                "decorators": Array [],
                "kind": "Parameter",
                "name": "id",
                "properties": Object {},
                "type": Number,
                "typeClassification": "Primitive",
              },
            ],
            "returnType": undefined,
            "typeClassification": undefined,
          },
        ],
        "name": "AnimalController",
        "properties": Array [],
        "type": AnimalController,
        "typeClassification": "Class",
      },
      "current": Object {
        "decorators": Array [
          Object {
            "authorize": customAuthorizer,
            "location": "Method",
            "tag": "Custom",
            "type": "plumier-meta:authorize",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
          Object {
            "method": "get",
            "name": "Route",
            "url": undefined,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Method",
        "name": "get",
        "parameters": Array [
          Object {
            "decorators": Array [],
            "kind": "Parameter",
            "name": "id",
            "properties": Object {},
            "type": Number,
            "typeClassification": "Primitive",
          },
        ],
        "parent": AnimalController,
        "returnType": undefined,
        "typeClassification": undefined,
      },
    },
  ],
]
`;
